--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,232 @@
-/* Estilos CSS */
+#containerLixeira {
+    border: 1px solid #ffffff;
+}
+
+#lixeira {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
+
+#lixeira button:hover {
+    background: radial-gradient(circle, rgb(189, 46, 26), rgb(161, 184, 29));
+}
+
+#lixeira input[type="text"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+#lixeira table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+
+#lixeira th, #lixeira td {
+    padding: 10px;
+    
+    text-align: left;
+}
+
+#selecionarTodos {
+    margin-left: 10px;
+}
+
+
+
+#esvaziarLixeira{
+    background: linear-gradient(45deg, rgb(10, 33, 25), rgb(218, 11, 51));
+}
+
+
+
+.nenhum-cliente-renovado {
+    color: red;
+}
+
+
+#infoClientes {
+    color: #008000;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 10px;
+    background: #e6ffe6;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    align-items: center;
+    text-align: center;
+}
+
+
+
+
+#infoClientes.slide-in {
+  animation: slide-in 0.5s forwards; /* Animação de slide-in */
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-100%); /* Começa fora da tela à esquerda */
+    opacity: 0; /* Transparente */
+  }
+  to {
+    transform: translateX(0); /* Move-se para a posição original */
+    opacity: 1; /* Opacidade completa */
+  }
+}
+
+
+
+
+.titulo-clientes-renovados {
+            color: red; /* Escolha a cor que preferir */
+            font-weight: bold;
+            
+        }
+        .slide-in {
+            animation: slideIn 0.5s forwards;
+        }
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateX(-100%);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+
+
+
+#backToTop {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background: linear-gradient(45deg, #00FF00, #228B22); 
+    color: white;
+    border: 1px solid #ffffff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    z-index: 1000;
+    opacity: 0.8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#backToTop::after {
+    content: '';
+    border: solid white;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 8px;
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+#backToTop:hover {
+    background: linear-gradient(45deg, #228B22, #00FF00); 
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+#backToTop:active {
+    transform: scale(0.95); /* Efeito de clique */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Reduz a sombra ao clicar */
+}
+
+
+
+
+.loading-coracao {
+  display:block;
+  position: relative;
+  width: 30px;
+  height: 30px;
+  margin:auto;
+  transform: rotate(45deg);
+  transform-origin: 40px 40px;
+  padding-left: 45px;
+  padding-bottom: 45px;
+}
+
+
+.loading-coracao span {
+  top: 32px;
+  left: 32px;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: #fd0000;
+  animation: loading-coracao 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+
+
+.loading-coracao span:after,
+.loading-coracao span:before {
+  content: " ";
+  position: absolute;
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: #fd0000;
+}
+
+
+
+.loading-coracao span:before {
+  left: -24px;
+  border-radius: 50% 0 0 50%;
+}
+
+
+
+.loading-coracao span:after {
+  top: -24px;
+  border-radius: 50% 50% 0 0;
+}
+
+
+
+@keyframes loading-coracao {
+  0% {
+    transform: scale(0.95);
+  }
+  5% {
+    transform: scale(1.1);
+  }
+  39% {
+    transform: scale(0.85);
+  }
+  45% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(0.9);
+  }
+}
+    
+         
+         
          
 .clientes-vencidos {
         color: red;
@@ -13,6 +241,8 @@
         margin-bottom: 5px;
         padding-left: 110px;
     }
+
+
 
     .clientes-ativos {
         color: green;
@@ -29,12 +259,16 @@
     }
       
 
+
+
 .flex-container {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 10px; /* Ajuste conforme necessário */
 }
+
+
 
 .drop {
 
@@ -57,36 +291,33 @@
 }
 
 
-
-
-/* estilos CSS... */
       
         footer {
-        text-align: center; /* Centraliza o texto no footer */
-        padding: 1px 0; /* Espaçamento interno maior para mais destaque */
-        background-color: #000000; /* Cor de fundo escura para destacar o footer */
-        color: #ecf0f1; /* Cor do texto clara para contraste */
-        position: fixed; /* Fixa o footer na parte inferior da página */
-        left: 0; /* Faz o footer começar na borda esquerda da tela */
-        right: 0; /* Faz o footer terminar na borda direita da tela */
-        bottom: 0; /* Alinha o footer na parte inferior da página */
-        font-size: 18px; /* Tamanho da fonte maior para melhor legibilidade */
-        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.7); /* Adiciona uma sombra mais forte para dar profundidade */
-        background-image: linear-gradient(45deg, #008a18, #00ee4e); /* Fundo gradiente para chamar atenção */
-        animation: pulse 2s infinite; /* Animação pulsante para chamar atenção */
-        z-index: 1000; /* Garante que o footer fique acima de outros elementos */
+        text-align: center;
+        padding: 1px 0;
+        background-color: #000000;
+        color: #ecf0f1;
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        font-size: 18px;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.7);
+        background-image: linear-gradient(45deg, #008a18, #00ee4e);
+        animation: pulse 2s infinite;
+        z-index: 1000;
     }
 
     footer a {
-        color: #000000; /* Cor do link que se destaca no fundo escuro */
-        text-decoration: none; /* Remove a sublinha padrão dos links */
-        font-weight: bold; /* Adiciona negrito aos links para destaque */
-        transition: color 0.3s ease; /* Transição suave na cor do link */
+        color: #000000;
+        text-decoration: none;
+        font-weight: bold;
+        transition: color 0.3s ease;
     }
 
     footer a:hover {
-        text-decoration: underline; /* Adiciona sublinha ao passar o mouse para indicar interatividade */
-        color: #fff242; /* Muda a cor ao passar o mouse para melhor feedback visual */
+        text-decoration: underline;
+        color: #fff242;
     }
 
     @keyframes pulse {
@@ -100,7 +331,7 @@
 
     .footer-light {
         background-image: linear-gradient(45deg, #00ee4e, #008a18); /* Fundo gradiente para modo claro */
-        color: #333; /* Cor do texto para modo claro */
+        color: #333;
     }
 
     .footer-light a {
@@ -111,10 +342,7 @@
         color: #00f518; /* Cor do link no modo claro ao passar o mouse */
     }
         
-        body {
-            font-family: Arial, sans-serif;
-            
-        }
+
         h1, button {
             opacity: 0;
             animation: slideIn 0.5s ease forwards;
@@ -136,7 +364,24 @@
             }
         }
         
-        /* Estilos CSS */
+        
+        
+        @keyframes desintegrate {
+    0% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    100% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+}
+
+.desintegrate {
+    animation: desintegrate 0.6s forwards;
+}
+        
+        
         
         
         body {
@@ -163,24 +408,16 @@
             max-width: 300px; 
         }
         
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            margin: 20px;
-        }
-        h1 {
+
+        
+       
+       h1 {
             color: #4CAF50;
+            text-align: center;
         }
-        
-        .logo {
-            display: block;
-            /* Centraliza e adiciona margem inferior */
-            margin: 0 auto 10px; 
-            /* Limita a largura da logomarca */
-            max-width: 300px; 
-        }
-        
+       
+       
+  
         table {
             width: 100%;
             border-collapse: collapse;
@@ -195,27 +432,66 @@
             text-align: center;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #d6ffe8;
             color: #333;
         }
         tr:nth-child(even) {
             background-color: #f9f9f9;
         }
         tr:hover {
-            background-color: #f1f1f1;
+            background-color: #a3ffcc;
         }
+
+
+
         .orange {
             background-color: orange;
             color: white;
+            position: relative;
+            overflow: hidden;
         }
+
+        .orange::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0) 70%);
+            transform: translateX(-50%) translateY(-100%);
+            animation: shine 2s infinite;
+            pointer-events: none;
+        }
+
+        @keyframes shine {
+            0% {
+                transform: translateX(-50%) translateY(-100%);
+            }
+            50% {
+                transform: translateX(-50%) translateY(100%);
+            }
+            100% {
+                transform: translateX(-50%) translateY(-100%);
+            }
+        }
+
+
+
         .yellow {
             background-color: yellow;
             color: black;
         }
+
+
+
         .red {
             background-color: red;
             color: white;
         }
+
+
+
         .input-container {
         margin-bottom: 15px;
         text-align: center;
@@ -235,10 +511,55 @@
         margin-top: 5px;
         border-color: #01e02d;
     }
-        
+    
+    .button {
+        background-color: #00BFFF;
+        color: #ffffff;
+    }
+    
+    .meio {
+    background: linear-gradient(to right, #A9A9A9 50%, #000000 50%);
+    color: #ffffff;
+    width: 157px;
+  
+}
+
+.meio:hover {
+    background: linear-gradient(to right, #A9A9A9 50%, #000000 50%);
+    color: #ffffff;
+    width: 157px;
+  
+}
+   
+   
+    #btnExcluirSelecionados {
+    background: linear-gradient(45deg, #ff1a1a, #ff6666);
+    color: #ffffff;
+    cursor: pointer;
+}
+
+    #btnExcluirSelecionados:hover {
+    background: linear-gradient(45deg, #ff6666, #ff1a1a);
+    color: #ffffff;
+   
+}
+#backup {
+       background: linear-gradient(45deg, #1e90ff, #00bfff);
+       color: #ffffff;
+    
+}
+
+#backup:hover {
+       background: linear-gradient(45deg, #00bfff, #1e90ff);
+       color: #ffffff;
+    
+}
+
+   
+   
         button {
-            background-color: #4CAF50;
-            color: white;
+            background: linear-gradient(45deg, #00ee4e, #008a18);
+            color: #ffffff;
             border-color:#ffffff;
             padding: 10px 20px;
             margin: 5px;
@@ -247,17 +568,21 @@
             border-radius: 10px;
             transition: background-color 0.3s;
         }
+        
+        
+        
         button:hover {
-            background-color: #faff38;
-            color: #00b921;
+            background: #000000;
             transform: scale(1.1);
         }
+        
+        
         .table-container {
             overflow-x: auto;
             max-width: 100%;
         }
 
-        /* Estilos para o modo escuro */
+         /* Estilos para o modo escuro */
         
         body.dark-mode {
             background-color: #000000;
@@ -283,7 +608,7 @@
         }
         body.dark-mode button:hover {
             background-color: #000000;
-            color: #00f56c;
+            color: #ffffff;
         }
         
         /* Estilos para dispositivos com largura de tela até 414px (Galaxy S23) */
